--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
  \usepackage{lipsum}
  \usepackage{graphicx}
  \usepackage{natbib}
+ \setcitestyle{authoryear}
  \usepackage{url}
  \journal{Treatise in Geomorphology}
  
@@ -38,7 +39,7 @@ During this exciting development phase, geomorphology codes were typically small
    
 By 2002, it was apparent to many in the Earth-surface-science community that developing a unified, predictive science of surface processes was beset by two large and growing problems: the community was fragmented, and the quantitative understanding of critical surface-dynamics processes was uneven. To address these issues, the US National Science Foundation sponsored a workshop in 2002 directed toward developing a `Community Sediment Model.' It was envisioned as a suite of integrated, quantitative predictive models of basin and landscape evolution, encompassing both the subaerial and submarine realms. Subsequent workshops, guided by parallel developments in geophysics and climate science, refined the concept and, in 2007, led to the establishment and funding of the Community Surface Dynamics Modeling System (CSDMS). Other supportive community efforts included the Computational Infrastructure for Geodynamics (CIG) \citep{kellogg2018role}, the Chesapeake Community Modeling Program (CCMP), the Coastal Sediment Transport Modeling System \citep{warner2008development}, ROMS (the Regional Ocean Modeling System), and the Object Modeling System \citep{david2013software}. Community modeling as defined here involves the collective efforts of individuals to code, debug, test, document, run, and apply models and modeling frameworks \citep{voinov2010community}.
 
-In its most basic form, a community modeling system is a suite of modeling components coupled in a framework \citep{voinov2010community}. The modeling components each consist of modular code, commonly with a standardized interface to allow different modules to communicate. The components performs specific tasks, such as reading digital elevation data from a file or computing grain-settling velocities according to a specific formula. Components typically can communicate with other components written in a different programming language and, thus, are different from ordinary subroutines, software modules, or classes in an object-oriented language. Individuals of relevant expertise freely give their time to code, debug, test, and document the various components and then donate them to the system. This by itself leads to an improvement in community efficiency. Community-developed components come together in a framework: a software library or system, designed around a set of standards and protocols, with which a user can run components, experiment with them by changing parameters in mid-run, and combine them to create integrated models. A framework allows one to assemble components coded and vetted by specialists into complex models tuned to their specific objectives. Community modeling brings several advantages. First, it makes efficient use of community resources by cutting redundancy among researchers and institutions. Second, community modeling promotes more effective integration of scientists and software specialists working on a particular Earth-surface system. Finally, it allows users, characteristically with valuable data sets, to participate in model definition and interaction with the data.
+In its most basic form, a community modeling system is a suite of modeling components coupled in a framework \citep{voinov2010community}. The modeling components each consist of modular code, commonly with a standardized interface to allow different modules to communicate. The components perform specific tasks, such as reading digital elevation data from a remote repository or computing grain-settling velocities according to a specific formula. Components typically can communicate with other components written in a different programming language and, thus, are different from ordinary subroutines, software modules, or classes in an object-oriented language. Individuals of relevant expertise freely give their time to code, debug, test, and document the various components and then donate them to the system. This by itself leads to an improvement in community efficiency. Community-developed components come together in a framework: a software library or system, designed around a set of standards and protocols, with which a user can run components, experiment with them by changing parameters in mid-run, and combine them to create integrated models. A framework allows one to assemble components coded and vetted by specialists into complex models tuned to their specific objectives. Community modeling brings several advantages. First, it makes efficient use of community resources by cutting redundancy among researchers and institutions. Second, community modeling promotes more effective integration of scientists and software specialists working on a particular Earth-surface system. Finally, it allows users, characteristically with valuable data sets, to participate in model definition and interaction with the data.
 
 
 
@@ -60,7 +61,7 @@ To create a modeling environment in which individual pre-existing model codes ac
 
 A second requirement for a modular environment is language standardization. Model programs in geomorphology and related sciences are written in a variety of languages, including Fortran, C, C++, and Python, to name a few. The CSDMS approach uses Python as a hub language. Python is  popular in the science community as a high-level interpreted language that allows for rapid prototyping, and it features a rich set of third-party open-source libraries for numerical computing, data analysis, and plotting. Once a code is equipped with a BMI in its native language, a software tool called babelizer is used to compile the code as a binary library that can be imported into Python. A user can then operate that model, using Python implementations of BMI functions, in a Python script, shell, or Jupyter notebook.
 
-The third requirement is a model execution and coupling framework. In its early research, the CSDMS Integration Facility experimented with graphically based frameworks. One discovery was that many problems of interest to the geomorphology community require a level of finesse and customization that can only be achieved with a programmatic, script-based framework.  For this reason, the current CSDMS approach provides a script-based framework that takes advantage of the power and popularity of the scientific Python. A code that has been equipped with a BMI and then compiled as a Python-readable binary library is said to have been `wrapped' as an interoperable component. Because any such component can be imported and run in a Python script, Python itself becomes the model coupling and execution framework. One can, for example, write a script in which two components are initialized, and then run in a loop in which the components iteratively exchange data (Figure~\ref{fig:pymt-cem-waves-example}). Alternatively, components that represent different terms in a governing equation could be queried for their derivatives, and those derivates then used to compose a matrix equation that is solved using Python matrix inversion utilities. These inherent framework capabilities are further enhanced with a Python package called the Python Modeling Tool (pymt), which provides several additional elements of functionality for coupling models. These include, for example, a standard-syntax setup function that creates the necessary input files for each component, and grid-mapping utilities that use interpolation to translate quantities from one grid to another (Figures~\ref{fig:pymt-cem-waves-example}, \ref{fig:child-sedflux}). The Python Modeling Tool makes it possible not just to assemble coupled, component-based models, but also to operate these models in a real-time experimental mode: advancing for a period of time, pausing to plot and analyze, modifying parameters, and continuing. In addition to its obvious educational application, this ability to play around with models provides a great way to generate new ideas and insights.
+The third requirement is a model execution and coupling framework. In its early research, the CSDMS Integration Facility experimented with graphically based frameworks. One discovery was that many problems of interest to the geomorphology community require a level of finesse and customization that can only be achieved with a programmatic, script-based framework.  For this reason, the current CSDMS approach provides a script-based framework that takes advantage of the power and popularity of the scientific Python. A code that has been equipped with a BMI and then compiled as a Python-readable binary library is said to have been `wrapped' as an interoperable component. Because any such component can be imported and run in a Python script, Python itself becomes the model coupling and execution framework. One can, for example, write a script in which two components are initialized, and then run in a loop in which the components iteratively exchange data (Figure~\ref{fig:pymt-cem-waves-example}). Alternatively, components that represent different terms in a governing equation could be queried for their derivatives, and those derivates then used to compose a matrix equation that is solved using Python matrix inversion utilities. These inherent framework capabilities are further enhanced with a Python package called the Python Modeling Tool (pymt), which provides several additional elements of functionality for coupling models. These include, for example, a standard-syntax setup function that creates the necessary input files for each component, and grid-mapping utilities that use interpolation to translate quantities from one grid to another (Figures~\ref{fig:pymt-cem-waves-example}, \ref{fig:child-sedflux}). The Python Modeling Tool makes it possible not just to assemble coupled, component-based models, but also to operate these models in a real-time experimental mode: advancing for a period of time, pausing to plot and analyze, modifying parameters, and continuing. In addition to its obvious educational application, this ability to play around with models provides a way to generate new ideas and insights.
 
 \begin{figure*}[htbp]
    \centering
@@ -72,13 +73,13 @@ The third requirement is a model execution and coupling framework. In its early 
 \begin{figure}[htbp]
    \centering
    \includegraphics[width=\columnwidth]{figures/child_sedflux.png} 
-   \caption{Output from a pymt integrated model that couples two components with different grid types. The CHILD model \citep{tucker2001channel}, written in C++, computes subaerial erosion, sediment transport, and landscape evolution on a triangulated irregular network of grid nodes. The Sedflux3d model \citep{hutton2008sedflux}, written in C, computes submarine transport, deposition, and stratigraphy on a regular grid. Pymt grid-mapping functions are used to interpolate between the two grid types. Coupling these two models as pymt components results in an integrated source-to-sink modeling framework. (Black line indicates shoreline; dark blue colors are deep water, and dark red colors are high elevations.)}
+   \caption{Output from a pymt integrated model that couples two components with different grid types. The CHILD model \citep{tucker2001channel}, written in C++, computes subaerial erosion, sediment transport, and landscape evolution on a triangulated irregular network of grid nodes. The Sedflux3d model \citep{hutton2008sedflux}, written in C, computes submarine transport, deposition, and stratigraphy on a regular grid. Pymt grid-mapping functions are used to interpolate between the two grid types. Coupling these two models as pymt components results in an integrated source-to-sink modeling framework. (Black line indicates shoreline; dark blue colors are deep water, and dark red colors are high elevations. Coupling example and figure design by Eric Hutton, University of Colorado Boulder.)}
    \label{fig:child-sedflux}
 \end{figure}
 
 New discoveries and new data in geomorphology motivate new models. To accelerate the development and exploration of a new generation of models, CSDMS deploys Landlab Toolkit: a Python-language programming library that supports modular model-building \citep{hobley2017creative,barnhart2020short}. Landlab complements the BMI-pymt framework while overcoming some of its limitations. One of those limitations is memory usage: because each BMI-pymt component manages its own data, there is inevitable duplication among components that represent the same state variables. Another limitation arises from the need to support multiple languages: the interface must be relatively simple, and cannot take advantage of advanced design features, such as built-in array types, that only a subset of languages support. Landlab takes advantage of the high-level language features of Python, such as object-oriented capabilities, to enable modular model construction at a more granular level. One of its key features lies in grid support. A Landlab grid is a self-contained data object. A programmer can create a grid object of a given type and geometry in a single line of Python code. Grids are represented as graphs (in the sense of graph theory), with each grid comprising a set of primitive geometric elements such as nodes, links, and cells. As a result, the same data structures can be used to represent grids of different types, such as raster, hex/trigonal, or unstructured. This provides the novel ability to operate the same numerical model with different grid types. State variables in a model are handled by adding arrays of data (`fields') to elements of the grid; for example, a heat-flow model might assign an array of temperature values to grid nodes, and an array of heat-flux values to links. 
 
-The Landlab Toolkit provides utilities to handle common operations in a numerical model, such as numerical functions (e.g., gradient, divergence), input of parameter values from a standard-format text file, and output of data in standard file formats such as NetCDF. The real power of Landlab, however, comes in its use of modular components. A Landlab component is a code implemented as a Python class that implements a numerical solution for a particular process or analysis function. For example, a Landlab component might implement a finite-volume solution to the conductive heat-diffusion equation. Landlab components use a lightweight interface that includes a constructor (initialization) function and an action function that advances the component in time (if it is a time-advancing process) or otherwise performs its calculation. A programmer can build an integrated model by importing a set of components, initializing them, and operating them in a time loop. The components share the same grid and associated fields of data, thereby avoiding duplicated memory usage.
+The Landlab Toolkit provides utilities to handle common operations in a numerical model, such as numerical functions (e.g., gradient, divergence), input of parameter values from a standard-format text file, and output of data in standard file formats such as NetCDF. The real power of Landlab, however, comes in its use of modular components. A Landlab component is a code, written as a Python class, that implements a numerical solution for a particular process or analysis function. For example, a Landlab component might implement a finite-volume solution to the conductive heat-diffusion equation. Landlab components use a lightweight interface that includes a constructor (initialization) function and an action function that advances the component in time (if it is a time-advancing process) or otherwise performs its calculation. A programmer can build an integrated model by writing a Python script that imports a set of components, initializes them, and executes their action functions in a time loop. The components share the same grid and associated fields of data, thereby avoiding duplicated memory usage.
 
 Figure~\ref{fig:islandexample} shows an example of a Landlab-built source-to-sink model that simulates the evolution of a large oceanic island undergoing active asymmetric rifting. The model is implemented as a Python script that integrates Landlab components for rift tectonics, flexural isostasy, flow routing on land, fluvial erosion and sedimentation, and marine sediment transport. 
 
@@ -106,6 +107,8 @@ Community modeling software does not simply evolve on its own, but instead requi
 
 Community modeling efforts, such as CSDMS, provide a competitive yet cooperative environment that can produce more reliable and more flexible simulation models than individuals working alone. Freely available open-source code with a standardized interface eliminates the endless rewriting of the same initial algorithms, allowing more time spent on new advances. The CSDMS protocols create honesty in what modelers claim, and the CSDMS architecture allows for faster verification and comparison of different approaches on new data sets. Communication is greatly increased among users and coders, and, therefore, a more integrated community is built. If a new and improved model component is developed, then this new component is provided with faster penetration into the community and likely will replace older components. New model couplings will allow hypothesis testing, sensitivity experiments on key parameters, and the identification of new avenues of research.
 
+
+\textbf{Acknowledgments:} CSDMS is supported by the US National Science Foundation (1831623, 1450409, 1924259, 2026951).
 
 \bibliographystyle{agu08}
 \bibliography{gt_library.bib}
